--- a/AmiableNext/AmiableNext.csproj
+++ b/AmiableNext/AmiableNext.csproj
@@ -10,4 +10,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AmiableNext.SDK\AmiableNext.SDK.csproj" />
+    </ItemGroup>
+
 </Project>
