--- a/AmiableNext/appsettings.json
+++ b/AmiableNext/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Urls": "http://localhost:5000;https://localhost:5001;",
+  "Mode": "Mirai_HTTP_HOOK",
+  "Mirai_HTTP_HOOK": {
+    "ApiUrl": "http://localhost:8091",
+    "AuthToken": "HEERSSSBBB"
+  },
+  "MyQQ_HTTP_API": {
+    "ApiUrl": "url",
+    "AuthToken": "auth"
+  }
 }
