--- a/AmiableNext/Properties/launchSettings.json
+++ b/AmiableNext/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "AmiableNext": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7243;http://localhost:5243",
       "environmentVariables": {
